--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         <div class="container" id="about">
           <h1 class="text-center" style="  text-shadow: 0 0 3px #FF0000;"><u>About Me</u></h1>
             <div class="row">
-               
+                <div class="col-md-4">
+                    <img style="height: 500px;width: 500px;" src="portfolio_photo-removebg-preview.jpg">
+                </div>
                 <div class="col-md-8">
                     <p>Aspiring Software Engineer with a strong foundation in computer science and hands-on experience in software
                         development through academic projects and internships.</p><br>
